--- a/lms/static/sass/multicourse/_home.scss
+++ b/lms/static/sass/multicourse/_home.scss
@@ -8,12 +8,15 @@
 
   > header {
     @include linear-gradient($homepage__header--gradient__color--alpha, $homepage__header--gradient__color--bravo);
-    background-size: cover;
+    background-color: #7ACCC8;
+    //background-size: cover;
     background-image: $homepage-bg-image;
+    background-position: center;
+    background-repeat: no-repeat;
     border-bottom: 1px solid $border-color-3;
     box-shadow: 0 1px 0 0 $course-header-bg, inset 0 -1px 5px 0 rgba(0,0,0, 0.1);
     @include clearfix;
-    height: 460px;
+    height: 300px;
     overflow: hidden;
     margin-top: $header_image_margin;
     padding: 0px;
@@ -21,8 +24,9 @@
 
     .outer-wrapper {
       @extend .animation-home-header-pop-up;
+
       margin: 0 auto;
-      padding: 240px 10px 0px;
+      // padding: 40px 0px 0px;
       position: relative;
       max-width: 1200px;
       min-width: 760px;
@@ -30,16 +34,19 @@
     }
 
     .title {
-      background: #FFF;
-      background: $course-header-bg;
-      border: 1px solid $border-color-3;
-      box-shadow: 0 4px 25px 0 rgba(0,0,0, 0.5);
-      @include box-sizing(border-box);
-      min-height: 120px;
-      margin-left: grid-width(2) + $gw-gutter;
-      width: flex-grid(6);
+      //background: #FFF;
+      //background: $course-header-bg;
+      //border: 1px solid $border-color-3;
+      //box-shadow: 0 4px 25px 0 rgba(0,0,0, 0.5);
+      //@include box-sizing(border-box);
+      //min-height: 120px;
+      //margin-left: grid-width(4) + $gw-gutter;
+      //margin-left: grid-width(4);
+      //width: flex-grid(4);
       float: left;
       position: relative;
+      margin-left: 50px;
+      margin-top: 50px;
       @include transition(all 0.2s linear 0s);
       vertical-align: top;
 
@@ -58,18 +65,42 @@
         top: 0px;
         @include transition(all 0.2s linear 0s);
         text-align: left;
+        display: inline-block;
+        width: flex-grid(8);
 
         h1 {
           margin-bottom: 0px;
           text-align: left;
           text-shadow: 0 1px rgba(255,255,255, 0.6);
           text-transform: none;
+          text-color: white;
         }
 
         h2 {
           font-style: italic;
           margin-bottom: 0px;
           text-transform: lowercase;
+          text-color: white;
+        }
+
+        h3 {
+        font-size: 3em;
+        color: white;
+        text-shadow: 0 1px rgba(255,255,255, 0.6);
+        font-family: "Open Sans", "PT Sans", "Helvetica", "Arial", sans-serif;
+        // display: inline-block;
+
+        }
+        a {
+
+        background-color: green;
+        padding: 20px;
+        margin-left: 20px;
+        display: inline-block;
+        }
+
+        .button {
+        background-color: green;
         }
       }
     }
