--- a/lms/static/sass/multicourse/_courses.scss
+++ b/lms/static/sass/multicourse/_courses.scss
@@ -9,8 +9,8 @@
     background-position: center top !important;
     border-bottom: 1px solid $border-color-3;
     box-shadow: inset 0 -1px 8px 0 rgba(0,0,0, 0.2), inset 0 1px 12px 0 rgba(0,0,0, 0.3);
-    height: 430px;
-    margin-top: $header_image_margin;
+    height: 300px;
+    margin-top: 0px;
     width: 100%;
 
     .inner-wrapper {
