--- a/lms/static/sass/multicourse/_home.scss
+++ b/lms/static/sass/multicourse/_home.scss
@@ -13,7 +13,8 @@
     border-bottom: 1px solid $border-color-3;
     box-shadow: 0 1px 0 0 $course-header-bg, inset 0 -1px 5px 0 rgba(0,0,0, 0.1);
     @include clearfix;
-    height: 460px;
+    height: 300px;
+    background-position: center top !important;
     overflow: hidden;
     margin-top: $header_image_margin;
     padding: 0px;
